Complete Phase 3B locomotion scaffold, wiring, and tests

--- a/Assets/Scripts/Input/PhysicsDrivenMovement.Input.asmdef
+++ b/Assets/Scripts/Input/PhysicsDrivenMovement.Input.asmdef
@@ -1,9 +1,7 @@
 {
-    "name": "PhysicsDrivenMovement.Character",
-    "rootNamespace": "PhysicsDrivenMovement.Character",
+    "name": "PhysicsDrivenMovement.Input",
+    "rootNamespace": "PhysicsDrivenMovement.Input",
     "references": [
-        "PhysicsDrivenMovement.Core",
-        "PhysicsDrivenMovement.Input",
         "Unity.InputSystem"
     ],
     "includePlatforms": [],
