--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
-    "com.unity.netcode.gameobjects": "2.1.1",
-    "com.unity.inputsystem": "1.8.2",
-    "com.unity.transport": "2.3.0",
-    "com.unity.test-framework": "1.4.5",
-    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.inputsystem": "1.18.0",
+    "com.unity.multiplayer.center": "1.0.1",
+    "com.unity.netcode.gameobjects": "2.9.1",
+    "com.unity.test-framework": "1.6.0",
+    "com.unity.transport": "2.6.0",
     "com.unity.modules.accessibility": "1.0.0",
+    "com.unity.modules.adaptiveperformance": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -32,6 +33,7 @@
     "com.unity.modules.unitywebrequestaudio": "1.0.0",
     "com.unity.modules.unitywebrequesttexture": "1.0.0",
     "com.unity.modules.unitywebrequestwww": "1.0.0",
+    "com.unity.modules.vectorgraphics": "1.0.0",
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
