--- a/Assets/Scripts/AI/PhysicsDrivenMovement.AI.asmdef
+++ b/Assets/Scripts/AI/PhysicsDrivenMovement.AI.asmdef
@@ -1,24 +1,18 @@
 {
-    "name": "PhysicsDrivenMovement.Tests.EditMode",
-    "rootNamespace": "PhysicsDrivenMovement.Tests.EditMode",
+    "name": "PhysicsDrivenMovement.AI",
+    "rootNamespace": "PhysicsDrivenMovement.AI",
     "references": [
         "PhysicsDrivenMovement.Core",
         "PhysicsDrivenMovement.Character",
-        "PhysicsDrivenMovement.AI",
         "PhysicsDrivenMovement.Environment"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": false,
+    "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "optionalUnityReferences": [
-        "TestAssemblies"
-    ],
     "noEngineReferences": false
 }
