--- a/Assets/Scripts/Editor/PhysicsDrivenMovement.Editor.asmdef
+++ b/Assets/Scripts/Editor/PhysicsDrivenMovement.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "PhysicsDrivenMovement.Core",
         "PhysicsDrivenMovement.Character",
-        "PhysicsDrivenMovement.Environment"
+        "PhysicsDrivenMovement.Environment",
+        "PhysicsDrivenMovement.AI"
     ],
     "includePlatforms": [
         "Editor"
