--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "2.0.4",
     "com.unity.netcode.gameobjects": "2.1.1",
     "com.unity.inputsystem": "1.8.2",
     "com.unity.transport": "2.3.0",
